Zerando issues do SONAR.