@@ -13,19 +13,19 @@ import java.util.Map;
  */
 public class TemaFlyweightFactory {
 
-    private TemaFlyweightFactory() {
-        /* This utility class should not be instantiated */
-    }
-
     public static final Class<TemaAsterico> ASTERICO = TemaAsterico.class;
     public static final Class<TemaHifen> HIFEN = TemaHifen.class;
     public static final Class<TemaAndersonMatte> ANDERSON_MATTE = TemaAndersonMatte.class;
     private static Map<Class<? extends TemaFlyweight>, TemaFlyweight> temas = new HashMap<>();
 
+    private TemaFlyweightFactory() {
+        /* This utility class should not be instantiated */
+    }
+
     public static TemaFlyweight getTema(Class<? extends TemaFlyweight> clazz) {
         if (!temas.containsKey(clazz)) {
             try {
-                temas.put(clazz, clazz.newInstance());
+                temas.put(clazz, clazz.getDeclaredConstructor().newInstance());
             } catch (Exception e) {
                 e.printStackTrace();
             }
